--- a/aula02.html
+++ b/aula02.html
@@ -11,23 +11,14 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             text-align: center;
-            background-color: rgba(34, 178, 27, 0.515);
-            color: rgb(26, 66, 101);
             font-weight: bold;
-        }
-
-        tr.linha {
-            background-color: bisque;
         }
 
         td {
             border: 1px solid black;
-        }
-
-        td.selecionado {
-            background-color: rgba(233, 130, 219, 0.84);
         }
 
     </style>
